--- a/src/html/_our_team.htm
+++ b/src/html/_our_team.htm
@@ -5,92 +5,12 @@
             <h2 class="our-team__heading h2">
                 Наша <span>команда</span>
             </h2>
-            <a href="#" class="our-team__link">
-                <svg width="16" height="28" viewBox="0 0 16 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.611543 2.7096L2.82196 0.501265L14.8615 12.5367C15.0556 12.7295 15.2096 12.9589 15.3147 13.2115C15.4198 13.4641 15.4739 13.735 15.4739 14.0086C15.4739 14.2822 15.4198 14.553 15.3147 14.8056C15.2096 15.0583 15.0556 15.2876 14.8615 15.4804L2.82196 27.5221L0.613626 25.3138L11.9136 14.0117L0.611543 2.7096Z" fill="black"/>
-                </svg>                    
-            </a>
+
+            <div>
+                <div class="our-team__next swiper-button-next"></div>
+                <div class="our-team__prev swiper-button-prev"></div>
+            </div>
         </div>
-
-        <!-- <div class="our-team__team">
-            <div class="our-team__human human">
-                <img src="@img/teem/Ocsana.jpg" width="510" height="550" class="human__img" alt="Головний дизайнер">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Оксана
-                    </h3>
-
-                    <p class="human__position">
-                        Головний дизайнер
-                    </p>
-                </div>
-            </div>
-
-            <div class="our-team__human human">
-                <img src="@img/teem/Dmytro.jpg" width="510" height="550" class="human__img" alt="Засновник та керівник">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Дмитро
-                    </h3>
-
-                    <p class="human__position">
-                        Засновник та керівник
-                    </p>
-                </div>
-            </div>
-
-            <div class="our-team__human human">
-                <img src="@img/teem/Daria.jpg" width="510" height="550" class="human__img" alt="Головний архітектор">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Дарія
-                    </h3>
-
-                    <p class="human__position">
-                        Головний архітектор
-                    </p>
-                </div>
-            </div>
-
-            <div class="our-team__human human">
-                <img src="@img/teem/Roman.jpg" width="510" height="550" class="human__img" alt="Виконроб">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Роман
-                    </h3>
-
-                    <p class="human__position">
-                        Виконроб
-                    </p>
-                </div>
-            </div>
-
-            <div class="our-team__human human">
-                <img src="@img/teem/Katja.jpg" width="510" height="550" class="human__img" alt="Архітектор">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Катерина
-                    </h3>
-
-                    <p class="human__position">
-                        Архітектор
-                    </p>
-                </div>
-            </div>
-
-            <div class="our-team__human human">
-                <img src="@img/teem/Viktoria.jpg" width="510" height="550" class="human__img" alt="Дизайнер">
-                <div class="human__desc">
-                    <h3 class="human__name">
-                        Вікторія
-                    </h3>
-
-                    <p class="human__position">
-                        Дизайнер
-                    </p>
-                </div>
-            </div>
-        </div> -->
 
         <div class="our-team__slider team-swiper">
             <div class="our-team__wrapper swiper-wrapper">
@@ -208,9 +128,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="our-team__next swiper-button-next"></div>
-            <div class="our-team__prev swiper-button-prev"></div>
         </div>
 
     </div>
