--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 				@@include('html/_consultation.htm',{})
 				@@include('html/_our_services.htm',{})
 				@@include('html/_our_team.htm',{})
+				@@include('html/_stages_work.htm',{})
+				@@include('html/_reviews.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
