--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 				@@include('html/_our_team.htm',{})
 				@@include('html/_stages_work.htm',{})
 				@@include('html/_reviews.htm',{})
+				@@include('html/_faq.htm',{})
+				@@include('html/_partners.htm',{})
+				@@include('html/_master.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
