--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
 				@@include('html/_faq.htm',{})
 				@@include('html/_partners.htm',{})
 				@@include('html/_master.htm',{})
+				@@include('html/_certificates.htm',{})
+				@@include('html/_projects.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
