created hero section

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
 			<main class="page">
+				@@include('html/_hero.htm',{})
 				@@include('html/_why_we.htm',{})
 				@@include('html/_consultation.htm',{})
 				@@include('html/_our_services.htm',{})
