--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 	@@include('html/_head.htm',{
 	"title":"HomePage"
 	})
@@ -19,6 +19,7 @@
 				@@include('html/_master.htm',{})
 				@@include('html/_certificates.htm',{})
 				@@include('html/_projects.htm',{})
+				@@include('html/_calculator.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
