created blog section

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
 				@@include('html/_certificates.htm',{})
 				@@include('html/_projects.htm',{})
 				@@include('html/_calculator.htm',{})
+				@@include('html/_prices.htm',{})
+				@@include('html/_videoplayer.htm',{})
+				@@include('html/_design_prices.htm',{})
+				@@include('html/_blog.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
