--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,16 @@
 			<main class="page">
 				@@include('html/_hero.htm',{})
 
+				@@include('html/_videoplayer.htm',{})
+				@@include('html/_our_team.htm',{})
+				@@include('html/_why_we.htm',{})
+				@@include('html/_partners.htm',{})
+				@@include('html/_man_hour.htm',{})
+				@@include('html/_work_performed.htm',{})
+				@@include('html/_reviews.htm',{})
 				@@include('html/_consultation.htm',{})
+				@@include('html/_certificates.htm',{})
+				@@include('html/_faq.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
