--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 				@@include('html/_videoplayer.htm',{})
 				@@include('html/_design_prices.htm',{})
 				@@include('html/_blog.htm',{})
+				@@include('html/_man_hour.htm',{})
+				@@include('html/_work_performed.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
