--- a/src/home.html
+++ b/src/home.html
@@ -13,8 +13,8 @@
                 @@include('html/_consultation.htm',{})
 				@@include('html/_our_services.htm',{})
 				@@include('html/_why_we.htm',{})
-				
-
+				@@include('html/_work_performed.htm',{})
+				@@include('html/_man_hour.htm',{})
 				@@include('html/_stages_work.htm',{})
 				@@include('html/_reviews.htm',{})
 				@@include('html/_calculator.htm',{})
