create about section

--- a/src/html/_hero.htm
+++ b/src/html/_hero.htm
@@ -3,7 +3,7 @@
     <div class="hero__container">
         <div class="hero__top-block">
             <h1 class="hero__heading h1">
-                Студія дизайну інтерʼєру та ремонту
+                Студія <span>дизайну інтерʼєру</span> та <span>ремонту</span>
                 <a href="#" class="hero__link">
                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
