--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 				@@include('html/_blog.htm',{})
 				@@include('html/_man_hour.htm',{})
 				@@include('html/_work_performed.htm',{})
+				@@include('html/_about.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
