--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,7 @@
 			@@include('html/_header.htm',{})
 			<main class="page">
 				@@include('html/_hero.htm',{})
-
+				@@include('html/_about.htm',{})
 				@@include('html/_videoplayer.htm',{})
 				@@include('html/_our_team.htm',{})
 				@@include('html/_why_we.htm',{})
