--- a/src/home.html
+++ b/src/home.html
@@ -8,10 +8,11 @@
 			@@include('html/_header.htm',{})
 			<main class="page">
 				@@include('html/_hero.htm',{})
-				@@include('html/_partners.htm',{})
+				@@include('html/_about.htm',{})
 				@@include('html/_videoplayer.htm',{})
                 @@include('html/_consultation.htm',{})
 				@@include('html/_our_services.htm',{})
+				@@include('html/_our_team.htm',{})
 				@@include('html/_why_we.htm',{})
 				@@include('html/_work_performed.htm',{})
 				@@include('html/_man_hour.htm',{})
@@ -22,6 +23,7 @@
 				@@include('html/_partners.htm',{})
 				@@include('html/_master.htm',{})
 				@@include('html/_certificates.htm',{})
+				@@include('html/_projects.htm',{})
 				@@include('html/_blog.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
