--- a/src/html/_master.htm
+++ b/src/html/_master.htm
@@ -15,11 +15,11 @@
                 готові прийти на допомогу в будь-яких питаннях дрібного ремонту чи обслуговуванні будинку!
             </p>
 
-            <a href="#" class="master__btn btn" data-da=".master__right-col,768,1">Викликати майстра</a>
+           
         </div>
         <div class="master__right-col">
+            <a href="#" class="master__btn btn">Викликати майстра</a>
             <img src="@img/master.png" width="680" alt="550" class="master__img" alt="Викликати майстра">
-            <!-- <a href="#" class="master__btn_mobile btn">Викликати майстра</a> -->
         </div>
     </div>
 </section>
