--- a/src/services.html
+++ b/src/services.html
@@ -8,8 +8,21 @@
 			@@include('html/_header.htm',{})
 			<main class="page">
 				@@include('html/_hero.htm',{})
-
+				@@include('html/_partners.htm',{})
+				@@include('html/_videoplayer.htm',{})
 				@@include('html/_consultation.htm',{})
+				@@include('html/_our_services.htm',{})
+				@@include('html/_why_we.htm',{})
+				@@include('html/_work_performed.htm',{})
+				@@include('html/_man_hour.htm',{})
+				@@include('html/_stages_work.htm',{})
+				@@include('html/_reviews.htm',{})
+				@@include('html/_consultation.htm',{})
+				@@include('html/_faq.htm',{})
+				@@include('html/_partners.htm',{})
+				@@include('html/_master.htm',{})
+				@@include('html/_certificates.htm',{})
+				@@include('html/_blog.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
