--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="ua">
 	@@include('html/_head.htm',{
-	"title":"HomePage"
+	"title":"Home page"
 	})
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
 			<main class="page">
 				@@include('html/_hero.htm',{})
-				@@include('html/_why_we.htm',{})
-				@@include('html/_consultation.htm',{})
+				@@include('html/_about.htm',{})
+				@@include('html/_videoplayer.htm',{})
+                @@include('html/_consultation.htm',{})
 				@@include('html/_our_services.htm',{})
 				@@include('html/_our_team.htm',{})
+				@@include('html/_why_we.htm',{})
+				@@include('html/_work_performed.htm',{})
+				@@include('html/_man_hour.htm',{})
 				@@include('html/_stages_work.htm',{})
 				@@include('html/_reviews.htm',{})
+				@@include('html/_calculator.htm',{})
 				@@include('html/_faq.htm',{})
 				@@include('html/_partners.htm',{})
 				@@include('html/_master.htm',{})
 				@@include('html/_certificates.htm',{})
 				@@include('html/_projects.htm',{})
-				@@include('html/_calculator.htm',{})
-				@@include('html/_prices.htm',{})
-				@@include('html/_videoplayer.htm',{})
-				@@include('html/_design_prices.htm',{})
 				@@include('html/_blog.htm',{})
-				@@include('html/_man_hour.htm',{})
-				@@include('html/_work_performed.htm',{})
-				@@include('html/_about.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
