--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -11,7 +11,7 @@
 			<button type="button" class="menu__icon icon-menu"><span></span></button>
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="home.html" class="menu__link active">Головна</a></li>
+					<li class="menu__item"><a href="/" class="menu__link active">Головна</a></li>
 					<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a></li>
 					<li class="menu__item"><a href="services.html" class="menu__link">Послуги</a></li>
 					<li class="menu__item"><a href="portfolio.html" class="menu__link">Портфоліо</a></li>
@@ -20,7 +20,7 @@
 					<li class="menu__item"><a href="blog.html" class="menu__link">Блог</a></li>
 					<li class="menu__item"><a href="vacancies.html" class="menu__link">Вакансії</a></li>
 					<li class="menu__item"><a href="reviews.html" class="menu__link">Відгуки</a></li>
-					<li class="menu__item"><a href="#calculator" class="menu__link">Калькулятор</a></li>
+					<li class="menu__item"><a href="calculator.html" class="menu__link">Калькулятор</a></li>
 					<li class="menu__item"><a href="cooperation.html" class="menu__link">Співпраця</a></li>
 					<li class="menu__item"><a href="contacts.html" class="menu__link">Контакти</a></li>
 				</ul>
