--- a/src/html/_our_services.htm
+++ b/src/html/_our_services.htm
@@ -30,7 +30,7 @@
                 <img src="@img/services/desing.jpg" alt="desing" width="970" height="400" class="our-services__img">
                 <div class="our-services__desc">
                     <h3 class="our-services__text">Дизайн інтерʼєру</h3>
-                    <a href="#" class="our-services__big-col_link">
+                    <a href="/service1.html" class="our-services__big-col_link">
                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M23.3031 1.74685L1.14708 23.9029M23.3031 1.74685L23.2357 20.6704M23.3031 1.74685L4.37957 1.81419" stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>                            
@@ -72,7 +72,7 @@
 
         <div class="our-services__row">
             <div class="our-services__smal-col">
-                <a href="#" class="our-services__smal-col_link">
+                <a href="/service2.html" class="our-services__smal-col_link">
                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M23.3031 1.74685L1.14708 23.9029M23.3031 1.74685L23.2357 20.6704M23.3031 1.74685L4.37957 1.81419" stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>                        
