create details work page

--- a/src/projects.html
+++ b/src/projects.html
@@ -128,7 +128,7 @@
 						<div class="projects__row">
 							<div class="projects__col project">
 								<img src="@img/projects/project1.jpg" class="project__img" width="510" height="436" alt="Image">
-								<a href="#" class="project__link">
+								<a href="/building_project.html" class="project__link">
 									<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M23.9281 1.74743L1.77208 23.9034M23.9281 1.74743L23.8607 20.6709M23.9281 1.74743L5.00457 1.81477"
@@ -139,7 +139,7 @@
 				
 							<div class="projects__col project">
 								<img src="@img/projects/project2.jpg" class="project__img" width="510" height="436" alt="Image">
-								<a href="#" class="project__link">
+								<a href="/building_project.html" class="project__link">
 									<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M23.9281 1.74743L1.77208 23.9034M23.9281 1.74743L23.8607 20.6709M23.9281 1.74743L5.00457 1.81477"
@@ -150,7 +150,7 @@
 				
 							<div class="projects__col project">
 								<img src="@img/projects/project3.jpg" class="project__img" width="510" height="436" alt="Image">
-								<a href="#" class="project__link">
+								<a href="/building_project.html" class="project__link">
 									<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M23.9281 1.74743L1.77208 23.9034M23.9281 1.74743L23.8607 20.6709M23.9281 1.74743L5.00457 1.81477"
