fix projects section

--- a/src/html/_projects.htm
+++ b/src/html/_projects.htm
@@ -47,6 +47,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
 
             <div class="projects__col project">
@@ -58,6 +61,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
 
             <div class="projects__col project">
@@ -69,6 +75,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
 
             <div class="projects__col project">
@@ -80,6 +89,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
 
             <div class="projects__col project">
@@ -91,6 +103,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
 
             <div class="projects__col project">
@@ -102,6 +117,9 @@
                             stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </a>
+                <div class="projects__title">
+                    Назва проєкту
+                </div>
             </div>
         </div>
 
