create button scroll top

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -118,5 +118,13 @@
 		<div class="footer_copyright">
 			<p>Студія ремонту та дизайну інтерʼєру Budguru. Всі права захищені</p>
 		</div>
+
+		<button class="footer__scroll-to" id="scroll-top">
+			<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M23.9281 1.74694L1.77207 23.9029M23.9281 1.74694L23.8607 20.6705M23.9281 1.74694L5.00456 1.81428"
+					stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round" stroke-linejoin="round" />
+			</svg>
+		</button>
 	</div>
 </footer>
