--- a/src/building_project.html
+++ b/src/building_project.html
@@ -14,15 +14,6 @@
 					<div class="hero__top-block">
 						<h1 class="hero__heading h1">
 							<span>Готові проекти</span> будинків
-							<a href="#" class="hero__link">
-								<svg width="25" height="25" viewBox="0 0 25 25" fill="none"
-									xmlns="http://www.w3.org/2000/svg">
-									<path
-										d="M23.9281 1.74694L1.77207 23.9029M23.9281 1.74694L23.8607 20.6705M23.9281 1.74694L5.00456 1.81428"
-										stroke="#1E1E1E" stroke-width="1.58" stroke-linecap="round"
-										stroke-linejoin="round" />
-								</svg>
-							</a>
 						</h1>
 
 						<div class="hero__lang">
@@ -148,13 +139,8 @@
                                 Про проект
                             </h3>
 
-                            <div class="project-desc__adress">
-                                <svg width="24" height="32" viewBox="0 0 24 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M12.0008 32C12.0008 32 0.800781 17.392 0.800781 11.2C0.800781 9.7292 1.09048 8.27279 1.65333 6.91395C2.21618 5.5551 3.04117 4.32042 4.08119 3.2804C5.1212 2.24039 6.35588 1.4154 7.71473 0.852549C9.07357 0.289697 10.53 0 12.0008 0C13.4716 0 14.928 0.289697 16.2868 0.852549C17.6457 1.4154 18.8804 2.24039 19.9204 3.2804C20.9604 4.32042 21.7854 5.5551 22.3482 6.91395C22.9111 8.27279 23.2008 9.7292 23.2008 11.2C23.2008 17.392 12.0008 32 12.0008 32ZM12.0008 14.4C12.8495 14.4 13.6634 14.0629 14.2635 13.4627C14.8636 12.8626 15.2008 12.0487 15.2008 11.2C15.2008 10.3513 14.8636 9.53737 14.2635 8.93726C13.6634 8.33714 12.8495 8 12.0008 8C11.1521 8 10.3382 8.33714 9.73804 8.93726C9.13792 9.53737 8.80078 10.3513 8.80078 11.2C8.80078 12.0487 9.13792 12.8626 9.73804 13.4627C10.3382 14.0629 11.1521 14.4 12.0008 14.4Z" fill="#1E1E1E"/>
-                                </svg>   
-                                <span>
-                                    м.Київ, вул.Богатирська 32, ЖК “Італійський квартал”
-                                </span>                                 
+                            <div class="project-desc__adress project-desc__price">
+                                <span>Вартість проекту будинку:</span> 100000грн
                             </div>
 
                             <ul>
@@ -177,6 +163,19 @@
                                     <span>Кількість спалень:</span> 4
                                 </li>
                             </ul>
+
+							<div class="project-desc__adress project-desc__price">
+                                <span>Вартість будівництва будинку:</span> 140000грн
+                            </div>
+
+							<div class="project-desc__adress project-desc__price">
+                                <span>Вартість будівництва будинку ( коробка будинку ):</span> 90000грн
+                            </div>
+
+							<div class="project-desc__adress project-desc__price">
+                                <span>Вартість будинку з внутрішнім оздобленням ( під ключ ):</span> 180000грн
+                            </div>
+							
                         </div>
                     </div>
 
