--- a/src/html/_hero.htm
+++ b/src/html/_hero.htm
@@ -13,8 +13,11 @@
                 </a>
             </h1>
 
-            <div class="hero__lang">
-                ua
+            <div class="hero__lang custom-select">
+                <div class="select-selected">UA</div>
+                <div class="select-items select-hide">
+                    <div data-url="https://budguru.kyiv.ua/ru/">RU</div>
+                </div>
             </div>
         </div>
         <div class="hero__center-block">
@@ -30,24 +33,24 @@
                 <li class="hero__social_item">
                     <a href="http://" class="hero__social_link">
                         <img src="@img/whatsapp-icon.png" width="32" height="32" class="hero__social_icon" alt="Image">
-                    </a> 
+                    </a>
                 </li>
                 <li class="hero__social_item">
                     <a href="http://" class="hero__social_link">
                         <img src="@img/telegram.png" width="32" height="32" class="hero__social_icon" alt="Image">
-                    </a> 
+                    </a>
                 </li>
                 <li class="hero__social_item">
                     <a href="http://" class="hero__social_link">
                         <img src="@img/viber.png" width="32" height="32" class="hero__social_icon" alt="Image">
-                    </a> 
+                    </a>
                 </li>
             </ul>
         </div>
         <div class="hero__bottom-block">
             <div class="hero__sticker sticker">
                 <div class="sticker__desc">
-                    сучасний ремонт  та дизайн
+                    сучасний ремонт та дизайн
                 </div>
 
                 <h3 class="sticker__heading">
@@ -66,13 +69,15 @@
                         Готові проекти будинків
                     </h4>
                     <p class="baner__text">
-                        Переходтье в наше архітектурне бюро  та дізнайтеся більше про готові проекти будинків
+                        Переходтье в наше архітектурне бюро та дізнайтеся більше про готові проекти будинків
                     </p>
                     <a href="#" class="baner__link">
                         <span>Детальніше</span>
                         <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M22.8865 9.93992L10.0889 22.7375M22.8865 9.93992L22.8476 20.8704M22.8865 9.93992L11.956 9.97882" stroke="white" stroke-width="1.28358" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>                            
+                            <path
+                                d="M22.8865 9.93992L10.0889 22.7375M22.8865 9.93992L22.8476 20.8704M22.8865 9.93992L11.956 9.97882"
+                                stroke="white" stroke-width="1.28358" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
                     </a>
                 </div>
             </div>
