sending calculator form

--- a/src/html/_calculator.htm
+++ b/src/html/_calculator.htm
@@ -5,7 +5,7 @@
         </div>
 
         <div class="calculator__steps">
-            <form>
+            <form class="calculator-form success" id="calculator-form">
                 <h2 class="calculator__heading h2">
                     Калькулятор вартості <span>ремонту</span>
                 </h2>
@@ -104,6 +104,16 @@
                             aria-label="Відправити заявку">
                     </div>
 
+                </div>
+
+                <div class="form-success">
+                    <img src="@img/smile.png" class="form-success__img" width="120" height="120" alt="smile">
+                    <h3 class="form-success__heading">
+                        Дякуємо за звернення!
+                    </h3>
+                    <p class="form-success__text">
+                        Наші спеціалісти звʼяжуться з вами найближчим часом!
+                    </p>
                 </div>
 
             </form>
