--- a/src/html/_consultation.htm
+++ b/src/html/_consultation.htm
@@ -9,7 +9,7 @@
             </div>
 
             <div class="consultation__form-wrap">
-                <form class="consultation__form">
+                <form class="consultation__form success">
 
                     <div class="consultation__field-wrap">
                         <p class="consultation__text">
@@ -17,11 +17,11 @@
                             вкажіть їх у формі нижче і наші спеціалісти звʼяжуться з вами найближчим часом!
                         </p>
     
-                        <input class="consultation__form-input" type="text" id="user-name" name="user-name"
+                        <input class="consultation__form-input _notvalid" type="text" id="user-name" name="user-name"
                             placeholder="Ваше імʼя" aria-label="Ваше імʼя">
-                        <input class="consultation__form-input" type="text" id="input-phone" name="phone"
+                        <input class="consultation__form-input _notvalid" type="text" id="input-phone" name="phone"
                             placeholder="Номер телефону" aria-label="Номер телефону" />
-                        <textarea class="consultation__form-input consultation__form-textarea" name="question" id="input-question"
+                        <textarea class="consultation__form-input consultation__form-textarea _notvalid" name="question" id="input-question"
                             placeholder="Ваше питання" aria-label="Ваше питання"></textarea>
                         <input class="consultation__btn-submit btn" type="submit" value="Відправити заявку"
                             aria-label="Відправити заявку">
