tried edits from the customer

--- a/src/html/_calculator.htm
+++ b/src/html/_calculator.htm
@@ -5,7 +5,7 @@
         </div>
 
         <div class="calculator__steps">
-            <form class="calculator-form success" id="calculator-form">
+            <form class="calculator-form" id="calculator-form">
                 <h2 class="calculator__heading h2">
                     Калькулятор вартості <span>ремонту</span>
                 </h2>
