--- a/src/html/_consultation.htm
+++ b/src/html/_consultation.htm
@@ -9,7 +9,7 @@
             </div>
 
             <div class="consultation__form-wrap">
-                <form class="consultation__form success">
+                <form class="consultation__form">
 
                     <div class="consultation__field-wrap">
                         <p class="consultation__text">
