--- a/src/html/_hero.htm
+++ b/src/html/_hero.htm
@@ -57,9 +57,9 @@
                     Замовте ремонт під ключ <span>та отримайте</span> <mark>дизайн проект у подарунок</ь>
                 </h3>
 
-                <a href="#" class="sticker__btn btn">
+                <button  class="sticker__btn btn" data-popup="popup">
                     Обговорити проект
-                </a>
+                </button>
             </div>
 
             <div class="hero__baner baner">
