--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 				@@include('html/_blog.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
+			@@include('html/_popup.htm',{})
 		</div>
 		@@include('html/_js.htm',{})
 	</body>
