added reviews interface

--- a/src/html/_reviews.htm
+++ b/src/html/_reviews.htm
@@ -17,7 +17,7 @@
 
                 <div class="reviews__slide swiper-slide">
                     <div class="review-card">
-                        <img src="@img/reviews/rating.png" width="184" height="32" alt="rating">
+                        <div data-rating="5" data-rating-value="4.5" class="rating"></div>
                         <div class="review-card__bio">
                             <h4 class="review-card__user-name">
                                 Анна Скляренко
