--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -20,7 +20,9 @@
 								Послуги
 								<span class="dropdown-nav-toggle">
 									<span class="svg-baseline">
-										<svg aria-hidden="true" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+										<svg aria-hidden="true" fill="currentColor" version="1.1"
+											xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+											viewBox="0 0 24 24">
 											<path
 												d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
 											</path>
@@ -29,7 +31,8 @@
 								</span>
 							</a>
 							<button class="dropdown-nav-special-toggle" aria-expanded="false">
-								<svg aria-hidden="true" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+								<svg aria-hidden="true" fill="currentColor" version="1.1"
+									xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
 									<path
 										d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
 									</path>
@@ -40,6 +43,35 @@
 						<ul class="sub-menu">
 							<li class="menu-item"><a href="service1.html">Дизайн інтерʼєру</a></li>
 							<li class="menu-item"><a href="service2.html">Чоловік на годину</a></li>
+							<li class="menu__item menu-item">
+								<div class="drawer-nav-drop-wrap"><a href="#" class="menu__link">Ремонт під ключ<span
+											class="dropdown-nav-toggle"><span class="svg-baseline"><svg
+													aria-hidden="true" fill="currentColor" version="1.1"
+													xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													viewBox="0 0 24 24">
+													<path
+														d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
+													</path>
+												</svg></span></span></a><button class="dropdown-nav-special-toggle"
+										aria-label="Відкрити підменю для Ремонт під ключ" aria-expanded="false"><svg
+											aria-hidden="true" fill="currentColor" version="1.1"
+											xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+											viewBox="0 0 24 24">
+											<path
+												d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
+											</path>
+										</svg></button></div>
+								<ul class="sub-menu">
+									<li class="menu__item menu-item"><a href="#" class="menu__link">Ремонт квартир</a>
+									</li>
+									<li class="menu__item menu-item"><a href="#" class="menu__link">Ремонт квартири в
+											новобудові</a></li>
+									<li class="menu__item menu-item"><a href="#" class="menu__link">Ремонт будинків</a>
+									</li>
+									<li class="menu__item menu-item"><a href="#" class="menu__link">Ремонт
+											таунхаусів</a></li>
+								</ul>
+							</li>
 						</ul>
 					</li>
 					<li class="menu__item">
@@ -59,7 +91,7 @@
 					<li class="menu__item">
 						<a href="projects.html" class="menu__link">
 							Готові проекти будинків
-							
+
 						</a>
 						<ul class="sub-menu">
 							<li class="menu-item"><a href="#">Зразок сторінки</a></li>
