--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -99,11 +99,11 @@
 						</ul>
 					</li>
 					<li class="menu__item"><a href="blog.html" class="menu__link">Блог</a></li>
-					<li class="menu__item"><a href="vacancies.html" class="menu__link">Вакансії</a></li>
+					<!-- <li class="menu__item"><a href="vacancies.html" class="menu__link">Вакансії</a></li>
 					<li class="menu__item"><a href="reviews.html" class="menu__link">Відгуки</a></li>
 					<li class="menu__item"><a href="calculator.html" class="menu__link">Калькулятор</a></li>
 					<li class="menu__item"><a href="cooperation.html" class="menu__link">Співпраця</a></li>
-					<li class="menu__item"><a href="contacts.html" class="menu__link">Контакти</a></li>
+					<li class="menu__item"><a href="contacts.html" class="menu__link">Контакти</a></li> -->
 				</ul>
 			</nav>
 		</div>
